changed header font

--- a/styles/index.css
+++ b/styles/index.css
@@ -88,7 +88,9 @@ body
     .pages li a {
         font-size: 12pt;
         color: orange;
-        font-family: "Lucida Console", Monaco, monospace;
+        font-family: ronnia-condensed, sans-serif;
+        font-style: normal;
+        font-weight: 200;
         text-decoration: none;
         display: block;
         text-align: center;
